swagger configs
